# miva-hub

./: .gitignore  .mcp.json  ANALYSIS_COMPLETE.txt  AUTO_SAVE_BUG_FIX.md  AUTO_SAVE_IMPLEMENTATION.md  AUTO_SAVE_VERIFICATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  HOSTING_SUMMARY.md  MAJORS_AND_COURSES.md  MCP_SERVER_CONFIG.md  PHASE_0_IMPLEMENTATION_COMPLETE.md  PHASE_0_PAYMENT_IMPLEMENTATION_PLAN.md  PHASE_1_CRITICAL_ANALYSIS.md  PHASE_1_DAY_BY_DAY_PLAN.md  PHASE_1_IMPLEMENTATION_PLAN.md  PHASE_1_INDEX.md  PHASE_1_MASTER_SUMMARY.md  PHASE_1_QUICK_START.md  PHASE_4_IMPLEMENTATION_PLAN.md  PRICING_PLAN_SIMPLE.md  PRICING_TIERS_PLAN.md  QUICK_DEPLOY.md  SCHOOL_AI_ASSISTANT_MVP_PLAN.md  UPLOAD_INTEGRATION_TEST_PLAN.md  chat.md  check_deployment_ready.sh  content.md  docker-compose.production.yml  error.md  package-lock.json  start-all.sh  startup.md  test-mcp-tools.js
mcp-server/: .env.example  AI_CONTENT_PROCESSING_IMPLEMENTATION.md  Dockerfile.content-processor  Dockerfile.mcp-server  Dockerfile.study-buddy  GROQ_SETUP.md  Procfile  README_STRUCTURE.md  ROADMAP_NEW_TOOLS.md  SETUP.md  TESTING_GUIDE.md  TESTING_RESULTS.md  USAGE_TRACKING_IMPLEMENTATION.md  add_mcp_server.py  ai_database_enhancement.sql  ai_integration.py  apply_ai_enhancement.py  apply_progress_migration.sh  batch_process_cos202.py  check_tables.py  clear_database.py  clear_database_simple.py  content.md  content_processor_api.py  create_dummy_data.sql  database.py  database_real.py  main.py  nixpacks.toml  pyproject.toml  render.yaml  requirements.txt  seed_miva_academic_data.py  server.py  (+10 more)
(+357 files in other folders)
